--- a/cinema-impl/src/main/resources/application_mysql.properties
+++ b/cinema-impl/src/main/resources/application_mysql.properties
@@ -1,5 +1,5 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/db
-spring.datasource.username = user
+spring.datasource.username = cinemaUser
 spring.datasource.password = password
 spring.jpa.show-sql = true
 spring.datasource.initialization-mode=always
