--- a/cinema-gui/pom.xml
+++ b/cinema-gui/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cinema.gui</artifactId>
-
+    <artifactId>cinema-gui</artifactId>
+    <packaging>jar</packaging>
     <repositories>
         <repository>
             <id>netbeans</id>
