--- a/cinema-security/pom.xml
+++ b/cinema-security/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>com.ltw</groupId>
-            <artifactId>cinema.api</artifactId>
+            <artifactId>cinema-api</artifactId>
             <version>${project.version}</version>
         </dependency>
 
